--- a/index.html
+++ b/index.html
@@ -38,5 +38,8 @@
             <img src = "images/Man.png" class = "smallFace">
             <div class = "talkToText"><h2>Talk to these memes.</h2></div>
         </div>
+        <div id="cardList">
+
+        </div>
     </body>
 </html>
