--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img src = "images/Man.png" class = "smallFace">
             <div class = "talkToText"><h2>Talk to these memes.</h2></div>
         </div>
-        <div id="cardList">
+        <div id="cardList" style="width: 100vw;">
 
         </div>
     </body>
