--- a/person.html
+++ b/person.html
@@ -8,10 +8,22 @@
         <meta name="viewport" content="width=device-width, user-scalable=no" />
         <link rel="manifest" href="manifest.json" />
     <body>
-        <h1 style="margin-bottom: 5vh;margin-top: 5vh;">Person of the day</h1>
+        <h1 style="margin-bottom: 5vh;margin-top: 5vh;"><span id = "potd">Person of the Day</span></h1>
         <div id="personBox">
             <img src="images/Man.png" style="width: 60%;padding: 10%;margin-left: 10%;padding-bottom: 2%;">
             <h2 style="text-align: center;padding-bottom: 5%;">Wyatt C.</h2>
+        </div>
+
+        <div id = "possibleTopicsCard">
+            <h2 id = "possibleTopicsText">Possible Topics</h2>
+            <h3 class = "possibleTopic">Their favorite animal</h3>
+            <h3 class = "possibleTopic">Their favorite movie</h3>
+            <h3 class = "possibleTopic">Their lunch today</h3>
+        </div>
+
+        <div id = "lastFriendlyInteractionCard">
+            <h2 id = "lastFriendlyInteractionText">Last Friendly Interaction:</h2>
+            <h3 class = "lastFriendlyInteraction">Saturday May 2, 2020</h3>
         </div>
         
     </body>
