--- a/person.html
+++ b/person.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <script src="scripts.js"></script>
+        <script src="person.js"></script>
         <link rel = "stylesheet" href = "styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap" rel="stylesheet">    </head>
         <meta name="viewport" content="width=device-width, user-scalable=no" />
@@ -11,7 +11,7 @@
         <h1 style="margin-bottom: 5vh;margin-top: 5vh;"><span id = "potd">Person of the Day</span></h1>
         <div id="personBox">
             <img src="images/Man.png" style="width: 60%;padding: 10%;margin-left: 10%;padding-bottom: 2%;">
-            <h2 style="text-align: center;padding-bottom: 5%;">Wyatt C.</h2>
+            <h2 id = "personName" style="text-align: center;padding-bottom: 5%;">Wyatt C.</h2>
         </div>
 
         <div id = "possibleTopicsCard">
