--- a/addfriends.html
+++ b/addfriends.html
@@ -2,13 +2,13 @@
 
 <html>
     <head>
-        <script src="scripts.js"></script>
+        <script src="scripts1.js"></script>
         <link rel = "stylesheet" href = "styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap" rel="stylesheet">    </head>
         <meta name="viewport" content="width=device-width, user-scalable=no" />
         <link rel="manifest" href="manifest.json" />
 
-    <body>
+    <body onload="setUpIndexDB()">
         <h1>Friendly<br>Reminders</h1>
         <button id="contactPickerButton" onclick="openUpContact()">Open up UI</button>        
 
