making index maybe work
we'll see

--- a/addfriends.html
+++ b/addfriends.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, user-scalable=no" />
         <link rel="manifest" href="manifest.json" />
 
-    <body onload="setUpIndexDB()">
+    <body>
         <h1>Friendly<br>Reminders</h1>
         <button id="contactPickerButton" onclick="openUpContact()">Open up UI</button>        
 
