adding person page and icons

--- a/person.html
+++ b/person.html
@@ -13,7 +13,17 @@
             <img src="images/Man.png" style="width: 60%;padding: 10%;margin-left: 10%;padding-bottom: 2%;">
             <h2 id = "personName" style="text-align: center;padding-bottom: 5%;">Wyatt C.</h2>
         </div>
-
+        <div style="float: left;margin-left: 5vw;width: 20vw;">
+            <div class="iconActions">
+                <img src="images/callIcon.png" style="width: 100%;">
+            </div>
+            <div class="iconActions">
+                <a href="sms:?body=Hello" target="_blank">
+                <img src="images/textIcon.png" style="width: 100%;">
+                </a>
+            </div>
+        </div>
+        <div style="margin-top: 30vh;"><br></div>
         <div id = "possibleTopicsCard">
             <h2 id = "possibleTopicsText">Possible Topics</h2>
             <h3 class = "possibleTopic">Their favorite animal</h3>
