--- a/myfriends.html
+++ b/myfriends.html
@@ -2,24 +2,19 @@
 
 <html>
     <head>
-        <script src="scripts.js"></script>
+        <script src="myfriends.js"></script>
         <link rel = "stylesheet" href = "styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap" rel="stylesheet">    </head>
         <meta name="viewport" content="width=device-width, user-scalable=no" />
         <link rel="manifest" href="manifest.json" />
 
     <body>
-        <h1>Friendly<br>Reminders</h1>
+        <h1>My<br>Friends</h1>
+        <button id="contactPickerButton" onclick="openUpContact()"><img id = "contactPickerButtonImg" src = "images/Add.png"></button>        
 
-        <a href="person.html">
-        
-        <div id="cardList" style="width: 100vw;">
-
-        </div>
-        
         <div id = "footerDiv">
-            <a href = "myfriends.html"><div class = "tab"><img class = "tabImg" src = "images/Person.png"></div></a>
-            <a href = "index.html"><div class = "tab" id = "thisPage"><img class = "tabImg" src = "images/Home.png"></div></a>
+            <a href = "myfriends.html"><div class = "tab" id = "thisPage"><img class = "tabImg" src = "images/Person.png"></div></a>
+            <a href = "index.html"><div class = "tab"><img class = "tabImg" src = "images/Home.png"></div></a>
             <a href = "stats.html"><div class = "tab"><img class = "tabImg" src = "images/Stats.png"></div></a>
         </div>
     </body>
