--- a/person.html
+++ b/person.html
@@ -35,6 +35,12 @@
             <h2 id = "lastFriendlyInteractionText">Last Friendly Interaction:</h2>
             <h3 class = "lastFriendlyInteraction">Saturday May 2, 2020</h3>
         </div>
+
+        <div id = "footerDiv">
+            <a href = "myfriends.html"><div class = "tab"><img class = "tabImg" src = "images/Person.png"></div></a>
+            <a href = "index.html"><div class = "tab" id = "thisPage"><img class = "tabImg" src = "images/Home.png"></div></a>
+            <a href = "stats.html"><div class = "tab"><img class = "tabImg" src = "images/Stats.png"></div></a>
+        </div>
         
     </body>
 </html>
