--- a/myfriends.html
+++ b/myfriends.html
@@ -11,7 +11,7 @@
     <body>
         <h1>My<br>Friends</h1>
         <button id="contactPickerButton" onclick="openUpContact()"><img id = "contactPickerButtonImg" src = "images/Add.png"></button>        
-
+        <div id="cardList" style="width: 100vw;"></div>
         <div id = "footerDiv">
             <a href = "myfriends.html"><div class = "tab" id = "thisPage"><img class = "tabImg" src = "images/Person.png"></div></a>
             <a href = "index.html"><div class = "tab"><img class = "tabImg" src = "images/Home.png"></div></a>
