--- a/person.html
+++ b/person.html
@@ -8,32 +8,34 @@
         <meta name="viewport" content="width=device-width, user-scalable=no" />
         <link rel="manifest" href="manifest.json" />
     <body onload="doStuff()">
-        <h1 style="margin-bottom: 5vh;margin-top: 5vh;"><span id = "potd">Person of the Day</span></h1>
-        <div id="personBox">
-            <img src="images/Man.png" style="width: 60%;padding: 10%;margin-left: 10%;padding-bottom: 2%;">
-            <h2 id = "personName" style="text-align: center;padding-bottom: 5%;">Wyatt C.</h2>
-        </div>
-        <div style="float: left;margin-left: 5vw;width: 20vw;">
-            <div class="iconActions">
-                <img src="images/callIcon.png" style="width: 100%;">
+        <div id = "allContent">
+            <h1 style="margin-bottom: 5vh;margin-top: 5vh;">Person of <br> the Day</h1>
+            <div id="personBox">
+                <img src="images/Man.png" style="width: 60%;padding: 10%;margin-left: 10%;padding-bottom: 2%;">
+                <h2 id = "personName" style="text-align: center;padding-bottom: 5%;">Wyatt C.</h2>
             </div>
-            <div class="iconActions">
-                <a href="sms:?body=Hello" target="_blank" id="smsID">
-                <img src="images/textIcon.png" style="width: 100%;">
-                </a>
+            <div style="float: left;margin-left: 5vw;width: 20vw;">
+                <div class="iconActions">
+                    <img src="images/callIcon.png" style="width: 100%;">
+                </div>
+                <div class="iconActions">
+                    <a href="sms:?body=Hello" target="_blank" id="smsID">
+                    <img src="images/textIcon.png" style="width: 100%;">
+                    </a>
+                </div>
             </div>
-        </div>
-        <div style="margin-top: 30vh;"><br></div>
-        <div id = "possibleTopicsCard">
-            <h2 id = "possibleTopicsText">Possible Topics</h2>
-            <h3 class = "possibleTopic">Their favorite animal</h3>
-            <h3 class = "possibleTopic">Their favorite movie</h3>
-            <h3 class = "possibleTopic">Their lunch today</h3>
-        </div>
+            <div style="margin-top: 30vh;"><br></div>
+            <div id = "possibleTopicsCard">
+                <h2 id = "possibleTopicsText">Possible Topics</h2>
+                <h3 class = "possibleTopic">Their favorite animal</h3>
+                <h3 class = "possibleTopic">Their favorite movie</h3>
+                <h3 class = "possibleTopic">Their lunch today</h3>
+            </div>
 
-        <div id = "lastFriendlyInteractionCard">
-            <h2 id = "lastFriendlyInteractionText">Last Friendly Interaction:</h2>
-            <h3 class = "lastFriendlyInteraction">Saturday May 2, 2020</h3>
+            <div id = "lastFriendlyInteractionCard">
+                <h2 id = "lastFriendlyInteractionText">Last Friendly Interaction:</h2>
+                <h3 class = "lastFriendlyInteraction">Saturday May 2, 2020</h3>
+            </div>
         </div>
 
         <div id = "footerDiv">
