--- a/person.html
+++ b/person.html
@@ -15,7 +15,9 @@
         </div>
         <div style="float: left;margin-left: 5vw;width: 20vw;">
             <div class="iconActions">
+                <a href="tel:" id="callID">
                 <img src="images/callIcon.png" style="width: 100%;">
+                </a>
             </div>
             <div class="iconActions">
                 <a href="sms:?body=Hello" target="_blank" id="smsID">
