--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <script src="scripts.js"></script>
+        
         <link rel = "stylesheet" href = "styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap" rel="stylesheet">    </head>
         <meta name="viewport" content="width=device-width, user-scalable=no" />
@@ -23,5 +23,30 @@
             <a href = "index.html"><div class = "tab" id = "thisPage"><img class = "tabImg" src = "images/Home.png"></div></a>
             <a href = "stats.html"><div class = "tab"><img class = "tabImg" src = "images/Stats.png"></div></a>
         </div>
+
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-app.js"></script>
+
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+        <script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-analytics.js"></script>
+
+        <script>
+            // Your web app's Firebase configuration
+            var firebaseConfig = {
+                apiKey: "AIzaSyAkM_I-Ws79RnIvOLf8qh1RQCVi71KxtbY",
+                authDomain: "friendlyreminders-5f78e.firebaseapp.com",
+                databaseURL: "https://friendlyreminders-5f78e.firebaseio.com",
+                projectId: "friendlyreminders-5f78e",
+                storageBucket: "friendlyreminders-5f78e.appspot.com",
+                messagingSenderId: "273447854632",
+                appId: "1:273447854632:web:72f525303d7b001c600b1d",
+                measurementId: "G-8DKCSZYBLL"
+            };
+            // Initialize Firebase
+            firebase.initializeApp(firebaseConfig);
+            firebase.analytics();
+        </script>
+        <script src="scripts.js"></script>
     </body>
 </html>
