--- a/person.html
+++ b/person.html
@@ -21,7 +21,9 @@
             </div>
             <div style="float: left;margin-left: 5vw;width: 20vw;">
                 <div class="iconActions">
-                    <img src="images/callIcon.png" style="width: 100%;">
+                    <a href="tel:" id="textID">
+                    <img src="images/textIcon.png" style="width: 100%;">
+                    </a>
                 </div>
                 <div class="iconActions">
                     <a href="sms:?body=Hello" target="_blank" id="smsID">
