adding up stuff

--- a/person.html
+++ b/person.html
@@ -28,9 +28,9 @@
             <div style="margin-top: 30vh;"><br></div>
             <div id = "possibleTopicsCard">
                 <h2 id = "possibleTopicsText">Possible Topics</h2>
-                <h3 class = "possibleTopic">Their favorite animal</h3>
-                <h3 class = "possibleTopic">Their favorite movie</h3>
-                <h3 class = "possibleTopic">Their lunch today</h3>
+                <h3 class = "possibleTopic" id="possibleTopicsText1">Their favorite animal</h3>
+                <h3 class = "possibleTopic" id="possibleTopicsText2">Their favorite movie</h3>
+                <h3 class = "possibleTopic" id="possibleTopicsText3">Their lunch today</h3>
             </div>
 
             <div id = "lastFriendlyInteractionCard">
