--- a/person.html
+++ b/person.html
@@ -20,7 +20,7 @@
                 </a>
             </div>
             <div class="iconActions">
-                <a href="tel:" id="textID">
+                <a href="sms:?body=" id="textID">
                 <img src="images/textIcon.png" style="width: 100%;">
                 </a>
             </div>
