--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
         <script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-analytics.js"></script>
+        
+        <script src="https://www.gstatic.com/firebase/7.15.0/firebase-messaging.js"></script>
+        <script src="https://www.gstatic.com/firebase/init.js"></script>
 
         <script>
             // Your web app's Firebase configuration
