fixing it again

--- a/myfriends.html
+++ b/myfriends.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, user-scalable=no" />
         <link rel="manifest" href="manifest.json" />
 
-    <body>
+    <body onload="reRender()">
         <h1>My<br>Friends</h1>
         <button id="contactPickerButton" onclick="openUpContact()"><img id = "contactPickerButtonImg" src = "images/Add.png"></button>        
         <div id="cardList" style="width: 100vw;"></div>
