added optional adding people

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <body>
         <div id = "allContent">
             <h1>Friendly<br>Reminders</h1>
+            <button id="contactPickerButton" onclick="enterAPerson()"><img id = "contactPickerButtonImg" src = "images/Add.png"></button>        
 
-            <a href="person.html">
             
             <div id="cardList" style="width: 100vw;">
 
