--- a/person.html
+++ b/person.html
@@ -35,7 +35,7 @@
 
             <div id = "lastFriendlyInteractionCard">
                 <h2 id = "lastFriendlyInteractionText">Last Friendly Interaction:</h2>
-                <h3 class = "lastFriendlyInteraction">Saturday May 2, 2020</h3>
+                <h3 class = "lastFriendlyInteraction">None Recorded</h3>
             </div>
         </div>
 
